# likuan

./: .gitignore  AI辅助C语言实践课程题目设计.docx  CMakeLists.txt  README.md  中期汇报.docx  展示教程.docx  最终版中期汇报.docx  最终版汇报.docx  最终版演示代码.docx  正则表达式引擎系统设计文档.docx  汇报-最终版.pptx  汇报（自己看版）.docx  演示代码.docx  第十四天最终报告.pptx
docs/: 2026-07-02-progress.md  2026-07-03-progress.md  2026-07-04-progress.md  2026-07-05-progress.md  2026-07-06-progress.md  2026-07-07-progress.md  2026-07-08-progress.md  2026-07-09-progress.md  2026-07-10-progress.md  2026-07-11-progress.md  2026-07-12-progress.md  2026-07-13-progress.md  day11-performance-report.md  first-10-days-audit.md  performance-day11.csv
docs/dot/: README.md  a-or-b.mindfa.dot  a-or-b.nfa.dot  a-star.mindfa.dot  a-star.nfa.dot  letters-digits.mindfa.dot  letters-digits.nfa.dot
include/: regex_engine.h
scripts/: build-msvc.ps1  demo.ps1
src/: ast.c  ast.h  capture.c  charset.c  charset.h  dfa.c  dfa.h  dfa_minimize.c  dot.c  dot.h  lexer.c  lexer.h  matcher.c  matcher.h  nfa.c  nfa.h  parser.c  parser.h  regex_engine.c
tests/: test_api.c  test_conformance.c  test_dfa.c  test_dot.c  test_lexer.c  test_nfa.c  test_parser.c  test_posix.c  test_stress.c
tools/: rx_bench.c  rx_cli.c  rx_dump_ast.c  rx_dump_dfa.c  rx_dump_dot.c  rx_dump_nfa.c  rx_dump_tokens.c
